# llm-think-on-graph

./: README.md  app.py  const.py  knowledge_graph.py  llm.py  pyproject.toml  reasoner.py  style.css  utils.py
data/: entities.json  relations.json  sample_queries.json  triples.json
temp/: documents.json  entities.json  relations.json  triples.json
uploads/: documents.json  entities.json  triples.json
